# amazon-freertos

./: CMakeLists.txt
demos/dev_mode_key_provisioning/src/: aws_dev_mode_key_provisioning.c
demos/include/: aws_application_version.h  aws_clientcredential.h  aws_clientcredential_keys.h  iot_config_common.h
libraries/abstractions/pkcs11/mbedtls/: iot_pkcs11_mbedtls.c
libraries/abstractions/platform/freertos/private/taskpool/: CMakeLists.txt  taskpool_freertos.c
libraries/abstractions/platform/freertos/private/taskpool/utest/: CMakeLists.txt  taskpool_utest.c
libraries/abstractions/secure_sockets/lwip/: iot_secure_sockets.c
libraries/abstractions/secure_sockets/utest/: CMakeLists.txt
libraries/abstractions/wifi/include/: iot_wifi.h
libraries/abstractions/wifi/test/: iot_test_wifi.c
libraries/c_sdk/aws/shadow/src/: aws_shadow.c
libraries/freertos_plus/aws/greengrass/include/: aws_ggd_config_defaults.h
libraries/freertos_plus/aws/ota/include/: aws_iot_ota_agent.h
projects/pc/windows/visual_studio/aws_demos/: aws_demos.vcxproj
tests/unit_test/linux/config_files/: portableDefs.h
tests/unit_test/windows/: CMakeLists.txt
tests/unit_test/windows/config_files/: FreeRTOSConfig.h  portableDefs.h
tools/cmock/: create_test.cmake
vendors/infineon/boards/xmc4800_iotkit/aws_tests/config_files/: FreeRTOSConfig.h
vendors/infineon/boards/xmc4800_iotkit/ports/wifi/: iot_wifi.c
vendors/pc/boards/windows/: CMakeLists.txt
vendors/pc/boards/windows/aws_demos/application_code/: aws_demo_logging.c  main.c
vendors/pc/boards/windows/aws_demos/config_files/: aws_demo_config.h  aws_ota_agent_config.h
vendors/ti/SimpleLink_CC32xx/v2_10_00_04/source/ti/devices/cc32xx/driverlib/ccs/: .project
vendors/ti/SimpleLink_CC32xx/v2_10_00_04/source/ti/drivers/net/wifi/ccs/: .project
vendors/ti/boards/cc3220_launchpad/ports/pkcs11/: core_pkcs11_pal.c
vendors/xilinx/boards/microzed/aws_demos/: aws_demos.bif
